Added view certificate button

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <div class="body">
                             <img src="assets/imgs/htmlcssjs.png" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" class="icon">
                             <h6 class="title">HTML, CSS and JavaScript</h6>
-                            <p class="subtitle"> HTML · CSS · JavaScript · ReactJS · NodeJS · Bootstrap · Dynamic web design · Canva</p>
+                            <p class="subtitle"> HTML · CSS · JS · ReactJS · NodeJS · Bootstrap · Dynamic web design · Canva</p>
                         </div>
                     </div>
                 </div>
@@ -357,6 +357,21 @@
         <div class="container text-center">
             <p class="section-subtitle">Recent achievements?</p>
             <h6 class="section-title mb-6">Certificates and Badges</h6>
+
+            <!-- blog-wrapper -->
+            <div class="blog-card">
+                <div class="blog-card-header">
+                    <img src="assets/imgs/awslogo.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                </div>
+                <div class="blog-card-body">
+                    <h5 class="blog-card-title">AWS Cloud Technical Essentials</h6>
+                    <p><b>By: </b> Coursea | AWS  </p>
+                    <p><b>Issued on: </b> July 2023</p>
+                </div>
+                <div>
+                    <a href="https://www.coursera.org/account/accomplishments/verify/D9XFQLFPVWT4" target="_blank" class="btn btn-primary mt-3 pricing-card-btn">View Certificate/Badge</a>
+                </div>
+            </div><!-- end of blog wrapper -->
             
             <!-- blog-wrapper -->
             <div class="blog-card">
@@ -367,7 +382,9 @@
                     <h5 class="blog-card-title">Cloud Technical Series '23</h6>
                     <p><b>By: </b> Google Cloud</p>
                     <p><b>Issued on: </b> April 2023</p>
-                    <a href="https://www.credential.net/a0648337-3908-4a02-87be-f6f475cc0743" target="_blank" class="blog-card-link">View Certificate/Badge</a>
+                </div>
+                <div>
+                    <a href="https://www.credential.net/a0648337-3908-4a02-87be-f6f475cc0743" target="_blank" class="btn btn-primary mt-3 pricing-card-btn">View Certificate/Badge</a>
                 </div>
             </div><!-- end of blog wrapper -->
 
@@ -380,7 +397,9 @@
                     <h5 class="blog-card-title">Relational Databases (RDBMS) Essentials</h6>
                     <p><b>By: </b> IBM </p>
                     <p><b>Issued on: </b> August 2022</p>
-                    <a href="https://www.credly.com/badges/e7d1442b-d3d9-4cfc-82ec-23bb4212b8dc" target="_blank" class="blog-card-link">View Certificate/Badge</a>
+                </div>
+                <div>
+                    <a href="https://www.credly.com/badges/e7d1442b-d3d9-4cfc-82ec-23bb4212b8dc" target="_blank" class="btn btn-primary mt-3 pricing-card-btn">View Certificate/Badge</a>
                 </div>
             </div><!-- end of blog wrapper -->
 
@@ -393,7 +412,9 @@
                     <h5 class="blog-card-title">AWS S3 Basics</h6>
                     <p><b>By: </b> Coursea | AWS  </p>
                     <p><b>Issued on: </b> August 2022</p>
-                    <a href="https://www.coursera.org/account/accomplishments/verify/NYAWBKGLV9RK" target="_blank" class="blog-card-link">View Certificate/Badge</a>
+                </div>
+                <div>
+                    <a href="https://www.coursera.org/account/accomplishments/verify/NYAWBKGLV9RK" target="_blank" class="btn btn-primary mt-3 pricing-card-btn">View Certificate/Badge</a>
                 </div>
             </div><!-- end of blog wrapper -->
 
@@ -406,7 +427,9 @@
                     <h5 class="blog-card-title">Object Oriented Programming in Java</h6>
                     <p><b>By: </b> Coursera </p>
                     <p><b>Issued on: </b> August 2020</p>
-                    <a href="https://www.coursera.org/account/accomplishments/verify/TTNLP9CNKLT4" target="_blank" class="blog-card-link">View Certificate/Badge</a>
+                </div>
+                <div>
+                    <a href="https://www.coursera.org/account/accomplishments/verify/TTNLP9CNKLT4" target="_blank" class="btn btn-primary mt-3 pricing-card-btn">View Certificate/Badge</a>
                 </div>
             </div><!-- end of blog wrapper -->
 
@@ -419,7 +442,9 @@
                     <h5 class="blog-card-title">Problem Solving</h6>
                     <p><b>By: </b> HackerRank </p>
                     <p><b>Issued on: </b> February 2021</p>
-                    <a href="https://www.hackerrank.com/certificates/038c1761000c" target="_blank" class="blog-card-link">View Certificate/Badge</a>
+                </div>
+                <div>
+                    <a href="https://www.hackerrank.com/certificates/038c1761000c" target="_blank" class="btn btn-primary mt-3 pricing-card-btn">View Certificate/Badge</a>
                 </div>
             </div><!-- end of blog wrapper -->
 
